Modify ingnore definition

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+java-app/target/
+java-app/.mvn/wrapper/maven-wrapper.jar
 *.DS_Store
 
 ### STS ###
